change email again

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <p>
     If you have questions about this privacy policy, you can contact the developer at:
     <br>
-    <strong>ronny.jakobsen@ive.dk</strong>
+    <strong>ronny.jakobsen@live.dk</strong>
   </p>
 
   <p style="margin-top: 40px; font-size: 0.9em; color: #666;">
